main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'main'", "'break'", 
                     "'continue'", "'return'", "'if'", "'else'", "'for'", 
                     "'function'", "'while'", "'do'", "'out'", "'of'", "'inherit'", 
                     "'array'", "'integer'", "'float'", "'boolean'", "'string'", 
                     "'void'", "'auto'", "'true'", "'false'", "'=='", "'!='", 
                     "'<='", "'>='", "'::'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'&&'", "'||'", "'='", "'!'", "'<'", "'>'", 
                     "':'", "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "','", "';'", "'\"'" ]

    symbolicNames = [ "<INVALID>", "BLOCK_COMMENT", "INLINE_COMMENT", "MAIN", 
                      "BREAK", "CONTINUE", "RETURN", "IF", "ELSE", "FOR", 
                      "FUNCTION", "WHILE", "DO", "OUT", "OF", "INHERIT", 
                      "ARRAY", "INTEGER", "FLOAT", "BOOLEAN", "STRING", 
                      "VOID", "AUTO", "TRUE", "FALSE", "DOUBLE_EQUAL", "NOT_EQUAL", 
                      "LESS_EQUAL", "GREATER_EQUAL", "DOUBLE_COLON", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "AND", "OR", "EQUAL", 
                      "NOT", "LESS", "GREATER", "COLON", "DOT", "LP", "RP", 
                      "LSB", "RSB", "LCB", "RCB", "COMMA", "SEMICOLON", 
                      "DOUBLE_QUOTE", "INTEGER_LIT", "FLOAT_LIT", "STRING_LIT", 
                      "ID", "WS", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl_list = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_var_short = 4
    RULE_var_init = 5
    RULE_midvar = 6
    RULE_main_entry = 7
    RULE_funcdecl = 8
    RULE_param_list = 9
    RULE_param = 10
    RULE_block_stmt = 11
    RULE_stmt_list = 12
    RULE_stmt = 13
    RULE_assign_stmt = 14
    RULE_lhs = 15
    RULE_return_stmt = 16
    RULE_if_stmt = 17
    RULE_else_stmt = 18
    RULE_for_stmt = 19
    RULE_scalar_var = 20
    RULE_init_expr = 21
    RULE_condition_expr = 22
    RULE_update_expr = 23
    RULE_while_stmt = 24
    RULE_do_while_stmt = 25
    RULE_break_stmt = 26
    RULE_continue_stmt = 27
    RULE_call_stmt = 28
    RULE_func_call = 29
    RULE_expr_list = 30
    RULE_expr = 31
    RULE_expr1 = 32
    RULE_expr2 = 33
    RULE_relational = 34
    RULE_expr3 = 35
    RULE_logical = 36
    RULE_expr4 = 37
    RULE_adding = 38
    RULE_expr5 = 39
    RULE_multiplying = 40
    RULE_expr6 = 41
    RULE_expr7 = 42
    RULE_expr8 = 43
    RULE_index_operator = 44
    RULE_expr_last = 45
    RULE_boolean_lit = 46
    RULE_idlist = 47
    RULE_var_type = 48
    RULE_func_type = 49
    RULE_atomic_type = 50
    RULE_array_type = 51
    RULE_int_list = 52
    RULE_array_lit = 53

    ruleNames =  [ "program", "decl_list", "decl", "vardecl", "var_short", 
                   "var_init", "midvar", "main_entry", "funcdecl", "param_list", 
                   "param", "block_stmt", "stmt_list", "stmt", "assign_stmt", 
                   "lhs", "return_stmt", "if_stmt", "else_stmt", "for_stmt", 
                   "scalar_var", "init_expr", "condition_expr", "update_expr", 
                   "while_stmt", "do_while_stmt", "break_stmt", "continue_stmt", 
                   "call_stmt", "func_call", "expr_list", "expr", "expr1", 
                   "expr2", "relational", "expr3", "logical", "expr4", "adding", 
                   "expr5", "multiplying", "expr6", "expr7", "expr8", "index_operator", 
                   "expr_last", "boolean_lit", "idlist", "var_type", "func_type", 
                   "atomic_type", "array_type", "int_list", "array_lit" ]

    EOF = Token.EOF
    BLOCK_COMMENT=1
    INLINE_COMMENT=2
    MAIN=3
    BREAK=4
    CONTINUE=5
    RETURN=6
    IF=7
    ELSE=8
    FOR=9
    FUNCTION=10
    WHILE=11
    DO=12
    OUT=13
    OF=14
    INHERIT=15
    ARRAY=16
    INTEGER=17
    FLOAT=18
    BOOLEAN=19
    STRING=20
    VOID=21
    AUTO=22
    TRUE=23
    FALSE=24
    DOUBLE_EQUAL=25
    NOT_EQUAL=26
    LESS_EQUAL=27
    GREATER_EQUAL=28
    DOUBLE_COLON=29
    ADD=30
    SUB=31
    MUL=32
    DIV=33
    MOD=34
    AND=35
    OR=36
    EQUAL=37
    NOT=38
    LESS=39
    GREATER=40
    COLON=41
    DOT=42
    LP=43
    RP=44
    LSB=45
    RSB=46
    LCB=47
    RCB=48
    COMMA=49
    SEMICOLON=50
    DOUBLE_QUOTE=51
    INTEGER_LIT=52
    FLOAT_LIT=53
    STRING_LIT=54
    ID=55
    WS=56
    ILLEGAL_ESCAPE=57
    UNCLOSE_STRING=58
    ERROR_CHAR=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decl_list(self):
            return self.getTypedRuleContext(MT22Parser.Decl_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.MAIN or _la==MT22Parser.ID:
                self.state = 108
                self.decl_list()


            self.state = 111
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Decl_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MT22Parser.DeclContext,0)


        def decl_list(self):
            return self.getTypedRuleContext(MT22Parser.Decl_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl_list" ):
                return visitor.visitDecl_list(self)
            else:
                return visitor.visitChildren(self)




    def decl_list(self):

        localctx = MT22Parser.Decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl_list)
        try:
            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.decl()
                self.state = 114
                self.decl_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def main_entry(self):
            return self.getTypedRuleContext(MT22Parser.Main_entryContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MT22Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.funcdecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.main_entry()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_short(self):
            return self.getTypedRuleContext(MT22Parser.Var_shortContext,0)


        def var_init(self):
            return self.getTypedRuleContext(MT22Parser.Var_initContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.var_short()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.var_init()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_shortContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_short

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_short" ):
                return visitor.visitVar_short(self)
            else:
                return visitor.visitChildren(self)




    def var_short(self):

        localctx = MT22Parser.Var_shortContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_short)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.idlist()
            self.state = 129
            self.match(MT22Parser.COLON)
            self.state = 130
            self.var_type()
            self.state = 131
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def midvar(self):
            return self.getTypedRuleContext(MT22Parser.MidvarContext,0)


        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_var_init

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_init" ):
                return visitor.visitVar_init(self)
            else:
                return visitor.visitChildren(self)




    def var_init(self):

        localctx = MT22Parser.Var_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_init)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.midvar()
            self.state = 134
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MidvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def midvar(self):
            return self.getTypedRuleContext(MT22Parser.MidvarContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def EQUAL(self):
            return self.getToken(MT22Parser.EQUAL, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_midvar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMidvar" ):
                return visitor.visitMidvar(self)
            else:
                return visitor.visitChildren(self)




    def midvar(self):

        localctx = MT22Parser.MidvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_midvar)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(MT22Parser.ID)
                self.state = 137
                self.match(MT22Parser.COMMA)
                self.state = 138
                self.midvar()
                self.state = 139
                self.match(MT22Parser.COMMA)
                self.state = 140
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(MT22Parser.ID)
                self.state = 143
                self.match(MT22Parser.COLON)
                self.state = 146
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.ARRAY, MT22Parser.INTEGER, MT22Parser.FLOAT, MT22Parser.BOOLEAN, MT22Parser.STRING]:
                    self.state = 144
                    self.var_type()
                    pass
                elif token in [MT22Parser.AUTO]:
                    self.state = 145
                    self.match(MT22Parser.AUTO)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 148
                self.match(MT22Parser.EQUAL)
                self.state = 149
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_entryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MAIN(self):
            return self.getToken(MT22Parser.MAIN, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_main_entry

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_entry" ):
                return visitor.visitMain_entry(self)
            else:
                return visitor.visitChildren(self)




    def main_entry(self):

        localctx = MT22Parser.Main_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_main_entry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(MT22Parser.MAIN)
            self.state = 153
            self.match(MT22Parser.COLON)
            self.state = 154
            self.match(MT22Parser.FUNCTION)
            self.state = 155
            self.match(MT22Parser.VOID)
            self.state = 156
            self.match(MT22Parser.LP)
            self.state = 157
            self.match(MT22Parser.RP)
            self.state = 158
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def func_type(self):
            return self.getTypedRuleContext(MT22Parser.Func_typeContext,0)


        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(MT22Parser.Block_stmtContext,0)


        def param_list(self):
            return self.getTypedRuleContext(MT22Parser.Param_listContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = MT22Parser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(MT22Parser.ID)
            self.state = 161
            self.match(MT22Parser.COLON)
            self.state = 162
            self.match(MT22Parser.FUNCTION)
            self.state = 163
            self.func_type()
            self.state = 164
            self.match(MT22Parser.LP)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.OUT) | (1 << MT22Parser.INHERIT) | (1 << MT22Parser.ID))) != 0):
                self.state = 165
                self.param_list()


            self.state = 168
            self.match(MT22Parser.RP)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 169
                self.match(MT22Parser.INHERIT)
                self.state = 170
                self.match(MT22Parser.ID)


            self.state = 173
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(MT22Parser.ParamContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def param_list(self):
            return self.getTypedRuleContext(MT22Parser.Param_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = MT22Parser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param_list)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.param()
                self.state = 176
                self.match(MT22Parser.COMMA)
                self.state = 177
                self.param_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def var_type(self):
            return self.getTypedRuleContext(MT22Parser.Var_typeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = MT22Parser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 182
                self.match(MT22Parser.INHERIT)


            self.state = 186
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 185
                self.match(MT22Parser.OUT)


            self.state = 188
            self.match(MT22Parser.ID)
            self.state = 189
            self.match(MT22Parser.COLON)
            self.state = 190
            self.var_type()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(MT22Parser.LCB, 0)

        def RCB(self):
            return self.getToken(MT22Parser.RCB, 0)

        def stmt_list(self):
            return self.getTypedRuleContext(MT22Parser.Stmt_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_block_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_stmt" ):
                return visitor.visitBlock_stmt(self)
            else:
                return visitor.visitChildren(self)




    def block_stmt(self):

        localctx = MT22Parser.Block_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_block_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 192
            self.match(MT22Parser.LCB)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BREAK) | (1 << MT22Parser.CONTINUE) | (1 << MT22Parser.RETURN) | (1 << MT22Parser.IF) | (1 << MT22Parser.FOR) | (1 << MT22Parser.WHILE) | (1 << MT22Parser.DO) | (1 << MT22Parser.LCB) | (1 << MT22Parser.ID))) != 0):
                self.state = 193
                self.stmt_list()


            self.state = 196
            self.match(MT22Parser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(MT22Parser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(MT22Parser.Stmt_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt_list" ):
                return visitor.visitStmt_list(self)
            else:
                return visitor.visitChildren(self)




    def stmt_list(self):

        localctx = MT22Parser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmt_list)
        try:
            self.state = 202
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 198
                self.stmt()
                self.state = 199
                self.stmt_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 201
                self.stmt()
                pass


